# eyejazzy

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
.claude-plugin/: plugin.json
skills/analyze/: SKILL.md
src/: config.py
tests/: test_health.py
