[project]
name = "template"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "uvloop",
    "pydantic-settings",
    "httpx",
]

[dependency-groups]
dev = [
    "ruff",
    "pyright",
    "pre-commit",
    "pytest",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.pyright]
typeCheckingMode = "strict"
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__", ".venv"]
venvPath = "."
venv = ".venv"
